--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 768px) and (max-width: 1000px){
+@media screen and (min-width: 800px) and (max-width: 1000px){
     body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
@@ -9,7 +9,7 @@
     }
 
     section#login > div#imagem{
-      float: right;
+      float: left;
       width: 30%;
       height: 100%;
     }
@@ -37,7 +37,7 @@
 
     
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
     }
 
