--- a/estilos/style.css
+++ b/estilos/style.css
@@ -8,7 +8,7 @@
 }
 
 body, html{
-    background-color: #5f2c82;
+    background-image: linear-gradient(to top, #5f2c82, #49a09d, #5f2c82);;
     height: 100vh;
     width: 100vw;
 }
