--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -19,6 +19,14 @@
         float: right;
         width: 70%;
     }
+
+    div#formulario > h1{
+        font-size: 1.8em;
+    }
+
+    div#formulario > p{
+        font-size: 1.1em;}
+   
 }
 
 @media screen and (min-width: 992px){
@@ -41,4 +49,11 @@
         width: 50%;
     }
 
+    div#formulario > h1{
+        font-size: 2em;
+    }
+
+    div#formulario > p{
+        font-size: 1.2em;
+    }
 }
