--- a/estilos/style.css
+++ b/estilos/style.css
@@ -57,3 +57,45 @@ div#formulario > h1{
 div#formulario > p{
     font-size: .8em;
 }
+
+form > div > input[type=submit]{
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color:   rgb(7, 89, 98);
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+form > div > input[type=submit]:hover{
+    background-color:  #298665;
+    
+}
+
+form > div > a.botao{
+    display: block;
+    text-align: center;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    padding-top: 5px;
+    margin-top: 5px;
+    background-color: white;
+    color:   rgb(7, 89, 98);
+    border: 1px solid   rgb(7, 89, 98);
+    border-radius: 7px;
+    text-decoration: none;
+
+}
+
+form a.botao:hover{
+    background-color:   rgb(7, 89, 98);
+    color: white;
+}
+
+form > div > a.botao > i{
+    font-size: 0.8em;
+}
