--- a/estilos/style.css
+++ b/estilos/style.css
@@ -28,7 +28,7 @@ section#login{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 520px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.534);
 
@@ -58,6 +58,19 @@ div#formulario > p{
     font-size: .8em;
 }
 
+form > div.campo{
+    background-color: #5f2c82;
+    display: block;
+    width: 100%;
+    height: 45px;
+    border-radius: 7px;
+    margin: 5px 0px;
+}
+
+div.campo > label{
+    display: none;
+}
+
 form > div > input[type=submit]{
     display: block;
     font-size: 1em;
@@ -71,7 +84,7 @@ form > div > input[type=submit]{
 }
 
 form > div > input[type=submit]:hover{
-    background-color:  #298665;
+    background-color:  #5f2c82;
     
 }
 
@@ -81,8 +94,8 @@ form > div > a.botao{
     font-size: 1em;
     width: 100%;
     height: 40px;
-    padding-top: 5px;
-    margin-top: 5px;
+    padding-top: 7px;
+    margin-top: 7px;
     background-color: white;
     color:   rgb(7, 89, 98);
     border: 1px solid   rgb(7, 89, 98);
