--- a/estilos/style.css
+++ b/estilos/style.css
@@ -63,12 +63,35 @@ form > div.campo{
     display: block;
     width: 100%;
     height: 45px;
-    border-radius: 7px;
+    border-radius: 8px;
     margin: 5px 0px;
 }
 
 div.campo > label{
     display: none;
+}
+
+div.campo>i{
+   
+    color: white;
+    font-size: 2.5em;
+    width: 45px;
+    padding: 5px 0px 5px 5px;
+   
+ 
+
+}
+
+
+div.campo>input{
+    background-color:rgb(7, 89, 98);
+    font-size: 1em;
+    width:calc(100% - 55px);
+    height: 45px;
+    border: 0px;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-18px);
 }
 
 form > div > input[type=submit]{
