--- a/estilos/media-query.css
+++ b/estilos/media-query.css
@@ -1,11 +1,12 @@
 @charset "UTF-8";
 
-@media screen and (min-width: 762px) and (max-width: 992px){
+@media screen and (min-width: 768px) and (max-width: 992px){
     body{
         background-image: linear-gradient(to top, #49a09d, #5f2c82);
     }
     section#login{
         width: 80vw;
+        height: 350px;
     }
 
     section#login > div#imagem{
@@ -25,7 +26,9 @@
     }
 
     div#formulario > p{
-        font-size: 1.1em;}
+        font-size: 1.1em;
+        padding-bottom: 15px;}
+       
    
 }
 
@@ -35,6 +38,7 @@
     }
     section#login{
         width: 950px;
+        height: 400px;
     }
 
     section#login > div#imagem{
@@ -55,5 +59,6 @@
 
     div#formulario > p{
         font-size: 1.2em;
+        padding-bottom: 15px;
     }
 }
