--- a/estilos/style.css
+++ b/estilos/style.css
@@ -56,15 +56,22 @@ div#formulario > h1{
 
 div#formulario > p{
     font-size: .8em;
+  
+    
 }
 
 form > div.campo{
-    background-color: #5f2c82;
+    background-color:  #230636;
+    border: 2px solid  #230636;
     display: block;
     width: 100%;
     height: 45px;
     border-radius: 8px;
     margin: 5px 0px;
+}
+
+div.campo > input:focus-within{
+    background-color: white;
 }
 
 div.campo > label{
@@ -87,11 +94,11 @@ div.campo>input{
     background-color:rgb(7, 89, 98);
     font-size: 1em;
     width:calc(100% - 55px);
-    height: 45px;
+    height: 40px;
     border: 0px;
     border-radius: 8px;
     padding: 4px;
-    transform: translateY(-18px);
+    transform: translateY(-21px);
 }
 
 form > div > input[type=submit]{
@@ -107,7 +114,7 @@ form > div > input[type=submit]{
 }
 
 form > div > input[type=submit]:hover{
-    background-color:  #5f2c82;
+    background-color:  #4d1671;
     
 }
 
